--- a/index.pug
+++ b/index.pug
@@ -220,7 +220,7 @@ html(lang="en")
                             // 
                             // Events small item
                             //
-                            td(class="grid-item-small", mc:edit="events-items-col-2")
+                            td(class="grid-item-small")
                               table
                                 tr
                                   td
@@ -269,7 +269,7 @@ html(lang="en")
                                   br
                                   p(mc:edit="startup-item-1-perex") Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
                                 img(src=`${apiUrl}/images/spaces/xl.png`, class="space xl" width="30" height="30")                                 
-                                img(class="divider" width="600" height="1", src=`${apiUrl}/images/divider.png`)
+                                img(class="divider" width="600" height="1", src=`${apiUrl}/images/divider-50.png`)
                   //
                   // Advices
                   //
