--- a/components.css
+++ b/components.css
@@ -6,14 +6,21 @@
   color: #502882;
   box-sizing: border-box;
 }
-.main-container {
-  width: 100%;
-}
 
 .newsletter {
-  width: 600px;
-  margin: auto;
+  max-width: 600px;
+  min-width: 300px;
 }
+
+.main-container {
+  min-width: 320px;
+}
+
+/* .newsletter {
+  max-width: 600px;
+  margin: auto;
+  width: 100%;
+} */
 
 table td,
 table td {
@@ -32,9 +39,6 @@ img {
 
 table {
   border-spacing: 0;
-}
-
-.layout {
 }
 
 /* TYPO */
@@ -196,12 +200,6 @@ br {
   font-size: 18px;
 }
 
-.hero-header td {
-}
-
-.hero-content > * {
-}
-
 .hero-content li {
   font-size: 18px;
 }
@@ -211,13 +209,6 @@ br {
 }
 
 /* GRID */
-.grid {
-  /* border-spacing: 0 40px; */
-}
-.grid-item-big,
-.grid-item-small {
-}
-
 .grid-item-small {
   width: 290px;
 }
@@ -232,8 +223,8 @@ br {
 }
 
 .grid-item-big .cover {
-  width: 600px !important;
   height: auto !important;
+  width: 100% !important;
 }
 
 .grid-item-big p {
@@ -261,14 +252,8 @@ br {
   color: white;
 }
 
-.info-tags {
-}
-
 .info-tags span {
   display: block;
-}
-
-.generic-content {
 }
 
 .btn {
@@ -297,26 +282,8 @@ a.btn-secondary img {
 }
 
 /* SECTION */
-.section {
-}
-
-.section:last-child {
-}
-
-.section-body {
-}
-
-.section-body.margin {
-}
-
-.section-noise {
-}
-
 .section-header {
-  width: 600px;
-}
-
-.section-header-outer {
+  width: 100%;
 }
 
 /* STARTUP */
@@ -332,19 +299,11 @@ a.btn-secondary img {
   text-decoration: underline;
 }
 
-.startup-item:last-child {
-  border-bottom: none;
-  padding-bottom: 0;
-}
-
 .divider {
-  width: 600px;
-  height: 1px;
-}
-.divider:last-child {
-  opacity: 0;
-}
-.divider:first-child {
+  max-width: 600px;
+  width: 100%;
+  height: 2px;
+  object-fit: contain;
 }
 
 /* QUOTES */
@@ -352,15 +311,9 @@ a.btn-secondary img {
   width: 24px;
 }
 
-.quote h3 {
-}
-
 .blockquote {
   text-decoration: none;
   display: block;
-}
-
-.blockquote h2 {
 }
 
 /* FIGURE BANNER */
@@ -369,12 +322,9 @@ a.btn-secondary img {
   display: block;
 }
 
-.generic-content td {
-}
-
 .figure-banner .cover {
   margin-bottom: 10px;
-  width: 600px !important;
+  width: 100% !important;
   height: auto !important;
 }
 
@@ -382,15 +332,9 @@ a.btn-secondary img {
   text-decoration: underline;
 }
 
-.figure-banner .btn {
-}
-
 /* FOOTER */
 .footer p {
   width: 90%;
-}
-
-.footer > div {
 }
 
 .socials {
@@ -406,11 +350,8 @@ a.btn-secondary img {
   display: block;
 }
 
-.pelmel h4 {
-}
-
 .advices .human {
-  width: 600px !important;
+  width: 100% !important;
   height: auto !important;
 }
 
